<resources>
    <string name="app_name">コーヒーブレンド比率推薦アプリ</string>
    <string name="button">ブレンド比率を取得する</string>
    <string name="button2">フィードバック</string>
    <string name="cb3">まずい</string>
    <string name="tv2">フィードバック</string>
    <string name="tv3">コーヒーの味</string>
    <string name="cb1">おいしい</string>
    <string name="cb2">普通</string>
    <string name="tv4">コクの量</string>
    <string name="cb4">多い</string>
    <string name="cb5">ちょうどいい</string>
    <string name="cb6">少ない</string>
    <string name="tv5">甘味の量</string>
    <string name="cb8">多い</string>
    <string name="cb8_">普通</string>
    <string name="cb9">少ない</string>
    <string name="textView">おはよう！</string>
    <string name="tv6">酸味の量</string>
    <string name="tv7">苦味の量</string>
    <string name="rb1">おいしい</string>
    <string name="rb2">普通</string>
    <string name="rb3">まずい</string>
    <string name="tv8">香り</string>
    <string name="tv9">飲みやすさ</string>
    <string name="rb4">多い</string>
    <string name="rb5">普通</string>
    <string name="rb6">少ない</string>
    <string name="rb7">多い</string>
    <string name="rb8">普通</string>
    <string name="rb9">少ない</string>
    <string name="rb10">多い</string>
    <string name="rb11">普通</string>
    <string name="rb12">少ない</string>
    <string name="rb13">多い</string>
    <string name="rb14">普通</string>
    <string name="rb15">少ない</string>
    <string name="rb16">強い</string>
    <string name="rb17">ちょうどいい</string>
    <string name="rb18">弱い</string>
    <string name="rb19">ちょうどいい</string>
    <string name="rb20">飲みにくい</string>
    <string name="button3">送信！</string>
    <string name="tv_id">Student ID</string>
    <string name="pass_tv">Password</string>
    <string name="login_button">ログイン</string>
    <string name="register_button">新規登録</string>
    <string name="tv_title">コーヒーブレンド比率推薦アプリ</string>
    <string name="et_sid">  User ID</string>
    <string name="et_pass">Password</string>
    <string name="tv_register">新規登録</string>
    <string name="button_new_register">登録</string>
    <string name="tv_firstname">FirstName</string>
    <string name="tv_sid2">Student ID</string>
    <string name="tv_pass2">Password</string>
    <string name="et_sid2">et_sid2</string>
    <string name="et_firstname">et_firstname</string>
    <string name="et_pass2">et_pass2</string>
    <string name="et_sid2_error">Student IDを入力してください</string>
    <string name="et_firstname_error">First Nameを入力してください</string>
    <string name="et_pass2_error">Passwordを入力してください</string>
    <string name="et_new_register">新規登録</string>
    <string name="tv_login">User IDとPasswordを入力してください</string>
    <string name="tv_or">━━━━━━━━━━or━━━━━━━━━━</string>
    <string name="acout_login">Acout Login</string>
</resources>
