<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".postActivity">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:layout_editor_absoluteX="16dp"
        tools:layout_editor_absoluteY="-33dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="vertical">

            <TextView
                android:id="@+id/tv2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="40dp"
                android:gravity="center_vertical"
                android:text="@string/tv2"
                android:textSize="24sp" />

            <TextView
                android:id="@+id/tv3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="30dp"
                android:text="@string/tv3" />

            <RadioGroup
                android:id="@+id/coffee_taste"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="15dp"
                android:orientation="horizontal">

                <RadioButton
                    android:id="@+id/rb1"
                    android:layout_width="102dp"
                    android:layout_height="wrap_content"
                    android:text="@string/rb1" />

                <RadioButton
                    android:id="@+id/rb2"
                    android:layout_width="76dp"
                    android:layout_height="wrap_content"
                    android:text="@string/rb2" />

                <RadioButton
                    android:id="@+id/rb3"
                    android:layout_width="93dp"
                    android:layout_height="wrap_content"
                    android:text="@string/rb3" />
            </RadioGroup>

            <TextView
                android:id="@+id/tv4"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="30dp"
                android:text="@string/tv4" />

            <RadioGroup
                android:id="@+id/richness"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="15dp"
                android:orientation="horizontal">

                <RadioButton
                    android:id="@+id/rb4"
                    android:layout_width="90dp"
                    android:layout_height="wrap_content"
                    android:text="@string/rb4" />

                <RadioButton
                    android:id="@+id/rb5"
                    android:layout_width="90dp"
                    android:layout_height="wrap_content"
                    android:text="@string/rb5" />

                <RadioButton
                    android:id="@+id/rb6"
                    android:layout_width="90dp"
                    android:layout_height="wrap_content"
                    android:text="@string/rb6" />

            </RadioGroup>

            <TextView
                android:id="@+id/tv5"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="30dp"
                android:text="@string/tv5" />

            <RadioGroup
                android:id="@+id/sweetness"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="15dp"
                android:orientation="horizontal">

                <RadioButton
                    android:id="@+id/rb7"
                    android:layout_width="90dp"
                    android:layout_height="wrap_content"
                    android:text="@string/rb7" />

                <RadioButton
                    android:id="@+id/rb8"
                    android:layout_width="90dp"
                    android:layout_height="wrap_content"
                    android:text="@string/rb8" />

                <RadioButton
                    android:id="@+id/rb9"
                    android:layout_width="90dp"
                    android:layout_height="wrap_content"
                    android:text="@string/rb9" />
            </RadioGroup>

            <TextView
                android:id="@+id/tv6"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="20dp"
                android:layout_marginStart="40dp"
                android:layout_marginTop="30dp"
                android:text="@string/tv6"
                app:lineHeight="40dp" />

            <RadioGroup
                android:id="@+id/acidity"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <RadioButton
                    android:id="@+id/rb10"
                    android:layout_width="90dp"
                    android:layout_height="wrap_content"
                    android:text="@string/rb10" />

                <RadioButton
                    android:id="@+id/rb11"
                    android:layout_width="90dp"
                    android:layout_height="wrap_content"
                    android:text="@string/rb11" />

                <RadioButton
                    android:id="@+id/rb12"
                    android:layout_width="90dp"
                    android:layout_height="wrap_content"
                    android:text="@string/rb12" />
            </RadioGroup>

            <TextView
                android:id="@+id/tv7"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="30dp"
                android:text="@string/tv7" />

            <RadioGroup
                android:id="@+id/bitterness"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="15dp"
                android:orientation="horizontal">

                <RadioButton
                    android:id="@+id/rb13"
                    android:layout_width="90dp"
                    android:layout_height="wrap_content"
                    android:text="@string/rb13" />

                <RadioButton
                    android:id="@+id/rb14"
                    android:layout_width="90dp"
                    android:layout_height="wrap_content"
                    android:text="@string/rb14" />

                <RadioButton
                    android:id="@+id/rb15"
                    android:layout_width="90dp"
                    android:layout_height="wrap_content"
                    android:text="@string/rb15" />
            </RadioGroup>

            <TextView
                android:id="@+id/tv8"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="30dp"
                android:text="@string/tv8" />

            <RadioGroup
                android:id="@+id/fragrance"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="15dp"
                android:orientation="horizontal">

                <RadioButton
                    android:id="@+id/rb16"
                    android:layout_width="75dp"
                    android:layout_height="wrap_content"
                    android:text="@string/rb16" />

                <RadioButton
                    android:id="@+id/rb17"
                    android:layout_width="120dp"
                    android:layout_height="wrap_content"
                    android:text="@string/rb17" />

                <RadioButton
                    android:id="@+id/rb18"
                    android:layout_width="75dp"
                    android:layout_height="wrap_content"
                    android:text="@string/rb18" />
            </RadioGroup>

            <TextView
                android:id="@+id/tv9"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="30dp"
                android:text="@string/tv9" />

            <RadioGroup
                android:id="@+id/easy_to_drink"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="15dp"
                android:orientation="horizontal">

                <RadioButton
                    android:id="@+id/rb19"
                    android:layout_width="135dp"
                    android:layout_height="wrap_content"
                    android:text="@string/rb19" />

                <RadioButton
                    android:id="@+id/rb20"
                    android:layout_width="135dp"
                    android:layout_height="wrap_content"
                    android:text="@string/rb20" />
            </RadioGroup>

            <Button
                android:id="@+id/button3"
                android:layout_width="195dp"
                android:layout_height="46dp"
                android:layout_marginTop="45dp"
                android:layout_marginBottom="28dp"
                android:text="@string/button3" />

        </LinearLayout>
    </ScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>